<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/border"
    android:layout_marginTop="@dimen/container_top_margin"
    android:padding="@dimen/listItem_padding">

    <TextView
        android:id="@+id/article_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/article_header"
        android:textStyle="bold"
        android:textSize="@dimen/article_header_text_size" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/article_section"
        tools:text="@string/article_section"
        android:textSize="@dimen/article_section_text_size"
        android:paddingBottom="@dimen/article_section_bottom_margin"
        android:textStyle="italic" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/article_body"
        tools:text="@string/article_body"
        android:layout_marginBottom="@dimen/article_body_bottom_margin"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="@dimen/article_body_text_size" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/article_date_text_size"
        tools:text="@string/article_date"
        android:textStyle="italic"
        android:id="@+id/article_date"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/article_author_text_size"
        android:id="@+id/article_author"
        android:textStyle="italic"
        tools:text="@string/article_author"/>
</LinearLayout>